--- a/index.html
+++ b/index.html
@@ -1,157 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="BetLinkHub - Join Trusted Betting WhatsApp Groups">
-  <meta name="description" content="Join trusted and verified betting WhatsApp groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Get expert tips, predictions, and earn safely.">
-  <meta name="keywords" content="Betting WhatsApp Group, Cricket Betting Tips, Football Predictions, Casino Strategies, Teen Patti Tips, Poker WhatsApp Group, Fantasy League Tips">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Join trusted and verified betting WhatsApp groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Daily tips, predictions & strategies to maximize your earnings safely.">
+  <meta name="keywords" content="betting group links, cricket betting tips, football betting, casino tips, teen patti strategies, poker group, fantasy league tips, whatsapp group links">
+  <meta name="robots" content="index, follow">
   <title>BetLinkHub - Trusted Betting WhatsApp Groups</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-200">
-
-<!-- Header -->
-<header class="py-6 text-center border-b dark:border-gray-700">
-  <h1 class="text-3xl font-bold">BetLinkHub</h1>
-  <p class="mt-2">Join Trusted Betting Groups | Earn with Confidence</p>
-  <button id="darkToggle" class="mt-4 px-4 py-2 bg-blue-600 text-white rounded">Toggle Dark Mode</button>
-</header>
-
-<!-- Intro -->
-<section class="max-w-4xl mx-auto py-8 px-4 text-center">
-  <h2 class="text-2xl font-semibold mb-4">Join the Most Trusted Betting WhatsApp Groups</h2>
-  <p>
-    BetLinkHub connects you with <strong>verified WhatsApp betting groups</strong> for sports, casino, and card games.  
-    Whether you follow <strong>Cricket, Football, Poker, Teen Patti</strong> or love <strong>Fantasy League</strong> games,  
-    our expert communities share winning tips, match predictions, and earning strategies.
-  </p>
-</section>
-
-<!-- Groups -->
-<section id="groups" class="py-12 max-w-6xl mx-auto px-4">
-  <h3 class="text-2xl font-bold mb-8 text-center">Available Groups</h3>
-  <div id="groupContainer" class="grid md:grid-cols-3 gap-6">
-    
-    <!-- Cricket -->
-    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow">
-      <img src="https://cdn-icons-png.flaticon.com/512/3097/3097144.png" alt="Cricket" class="w-12 h-12 mb-3">
-      <h4 class="text-xl font-semibold mb-1">[254 Members] Cricket Betting Group</h4>
-      <p class="mb-4">Verified cricket betting tips, live match predictions, and winning strategies for major leagues.</p>
-      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
-    </div>
-
-    <!-- Football -->
-    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow">
-      <img src="https://cdn-icons-png.flaticon.com/512/1165/1165187.png" alt="Football" class="w-12 h-12 mb-3">
-      <h4 class="text-xl font-semibold mb-1">[189 Members] Football Betting Group</h4>
-      <p class="mb-4">Daily football match insights, expert score predictions, and safe betting guidance.</p>
-      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
-    </div>
-
-    <!-- Casino -->
-    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow">
-      <img src="https://cdn-icons-png.flaticon.com/512/833/833314.png" alt="Casino" class="w-12 h-12 mb-3">
-      <h4 class="text-xl font-semibold mb-1">[312 Members] Casino Betting Group</h4>
-      <p class="mb-4">Learn safe and proven casino strategies with expert tips to maximize your winnings.</p>
-      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
-    </div>
-
-    <!-- Teen Patti -->
-    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow hidden extraGroup">
-      <img src="https://cdn-icons-png.flaticon.com/512/1086/1086473.png" alt="Teen Patti" class="w-12 h-12 mb-3">
-      <h4 class="text-xl font-semibold mb-1">[276 Members] Teen Patti Pro Group</h4>
-      <p class="mb-4">Exclusive Teen Patti strategies, high-stakes gameplay tips, and winning tricks.</p>
-      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
-    </div>
-
-    <!-- Poker -->
-    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow hidden extraGroup">
-      <img src="https://cdn-icons-png.flaticon.com/512/2910/2910768.png" alt="Poker" class="w-12 h-12 mb-3">
-      <h4 class="text-xl font-semibold mb-1">[198 Members] Poker Mastermind</h4>
-      <p class="mb-4">Learn winning poker strategies from top-ranked players in our trusted WhatsApp group.</p>
-      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
-    </div>
-
-    <!-- Fantasy League -->
-    <div class="p-6 bg-white dark:bg-gray-800 rounded-xl shadow hidden extraGroup">
-      <img src="https://cdn-icons-png.flaticon.com/512/2103/2103626.png" alt="Fantasy League" class="w-12 h-12 mb-3">
-      <h4 class="text-xl font-semibold mb-1">[223 Members] Fantasy League Experts</h4>
-      <p class="mb-4">Get expert picks, dream team suggestions, and winning tips for fantasy sports leagues.</p>
-      <a href="https://wa.me/919670814522" target="_blank" class="px-4 py-2 bg-green-600 text-white rounded">Join Now</a>
-    </div>
-  </div>
-
-  <div class="text-center mt-6">
-    <button id="viewAllBtn" class="px-4 py-2 bg-blue-600 text-white rounded">View All</button>
-  </div>
-</section>
-
-<!-- FAQ -->
-<section class="max-w-4xl mx-auto py-12 px-4">
-  <h3 class="text-2xl font-bold mb-6 text-center">Frequently Asked Questions</h3>
-  <div>
-    <h4 class="font-semibold">Are these betting groups safe?</h4>
-    <p class="mb-4">Yes, all groups listed on BetLinkHub are verified and moderated for a safe experience.</p>
-
-    <h4 class="font-semibold">Do I need to pay to join?</h4>
-    <p class="mb-4">Most groups are free, but some premium groups may have a membership fee.</p>
-
-    <h4 class="font-semibold">Can I join multiple groups?</h4>
-    <p>Yes, you can join as many groups as you like depending on your interests.</p>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="py-6 text-center border-t dark:border-gray-700">
-  <p>© 2025 BetLinkHub. All rights reserved.</p>
-</footer>
-
-<!-- Schema Markup -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "Are these betting groups safe?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, all groups listed on BetLinkHub are verified and moderated for a safe experience."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Do I need to pay to join?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Most groups are free, but some premium groups may have a membership fee."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Can I join multiple groups?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, you can join as many groups as you like depending on your interests."
-      }
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f9f9f9;
+      color: #222;
+      transition: background 0.3s, color 0.3s;
     }
-  ]
-}
-</script>
+    .dark-mode {
+      background: #1a1a1a;
+      color: #f1f1f1;
+    }
+    header {
+      text-align: center;
+      padding: 20px;
+      background: #0077cc;
+      color: #fff;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+    .toggle-btn {
+      margin-top: 10px;
+      padding: 8px 16px;
+      background: #fff;
+      color: #0077cc;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    section {
+      max-width: 1100px;
+      margin: auto;
+      padding: 20px;
+    }
+    .groups {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+    }
+    .group-card {
+      background: #fff;
+      padding: 16px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+    .dark-mode .group-card {
+      background: #2b2b2b;
+    }
+    .group-card:hover {
+      transform: translateY(-3px);
+    }
+    .group-card img {
+      width: 40px;
+      height: 40px;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
+    .group-card h4 {
+      margin: 0;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+    }
+    .group-card p {
+      margin: 10px 0;
+      font-size: 14px;
+    }
+    .btn-primary {
+      display: inline-block;
+      padding: 8px 14px;
+      background: #0077cc;
+      color: #fff;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+    .dark-mode .btn-primary {
+      background: #3399ff;
+    }
+    .view-toggle {
+      display: block;
+      text-align: center;
+      margin-top: 20px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #0077cc;
+    }
+    .faq {
+      margin-top: 40px;
+    }
+    .faq h3 {
+      margin-bottom: 10px;
+    }
+    .faq p {
+      margin-bottom: 20px;
+      font-size: 14px;
+    }
+  </style>
+  <!-- FAQ Schema for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [{
+      "@type": "Question",
+      "name": "What is BetLinkHub?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "BetLinkHub is a platform that provides trusted and verified WhatsApp group links for Cricket, Football, Casino, Teen Patti, Poker, and Fantasy League betting."
+      }
+    },{
+      "@type": "Question",
+      "name": "Are the betting groups safe to join?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, all listed groups are verified and regularly monitored to ensure safe and trustworthy betting tips."
+      }
+    }]
+  }
+  </script>
+</head>
+<body>
+  <header>
+    <h1>BetLinkHub</h1>
+    <button class="toggle-btn" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+  </header>
 
-<!-- Script -->
-<script>
-document.getElementById("viewAllBtn").addEventListener("click", function(){
-  document.querySelectorAll(".extraGroup").forEach(g => g.classList.toggle("hidden"));
-  this.textContent = this.textContent === "View All" ? "Show Less" : "View All";
-});
+  <section>
+    <h2 style="text-align:center;">Join Trusted Betting Groups</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">
+      Discover the most trusted and verified betting WhatsApp groups for <strong>Cricket, Football, Casino, Teen Patti, Poker,</strong> and <strong>Fantasy League</strong>. 
+      Get daily expert tips, predictions, and strategies to increase your winnings safely.
+    </p>
 
-document.getElementById("darkToggle").addEventListener("click", function(){
-  document.documentElement.classList.toggle("dark");
-});
-</script>
+    <div class="groups" id="group-list">
+      <div class="group-card">
+        <h4><img src="https://cdn-icons-png.flaticon.com/512/861/861512.png"> [254 Members] Cricket Betting Group</h4>
+        <p>Verified cricket betting tips and match predictions for safe and profitable betting.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
+      </div>
+      <div class="group-card">
+        <h4><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png"> [189 Members] Football Betting Group</h4>
+        <p>Daily football match insights, odds analysis, and safe betting tips from experts.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
+      </div>
+      <div class="group-card">
+        <h4><img src="https://cdn-icons-png.flaticon.com/512/861/861464.png"> [312 Members] Casino Betting Group</h4>
+        <p>Learn safe casino strategies, game analysis, and winning tricks from professionals.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
+      </div>
+      <div class="group-card hidden">
+        <h4><img src="https://cdn-icons-png.flaticon.com/512/616/616489.png"> [276 Members] Teen Patti Pro Group</h4>
+        <p>Exclusive Teen Patti strategies, high-stakes tips, and pro tricks to win big.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
+      </div>
+      <div class="group-card hidden">
+        <h4><img src="https://cdn-icons-png.flaticon.com/512/616/616408.png"> [198 Members] Poker Mastermind</h4>
+        <p>Learn winning poker strategies, bluffing techniques, and cash game secrets.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
+      </div>
+      <div class="group-card hidden">
+        <h4><img src="https://cdn-icons-png.flaticon.com/512/5969/5969012.png"> [223 Members] Fantasy League Experts</h4>
+        <p>Get expert picks, tips, and team strategies for fantasy sports leagues.</p>
+        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
+      </div>
+    </div>
 
+    <span class="view-toggle" onclick="toggleGroups()">View All</span>
+
+    <div class="faq">
+      <h3>Frequently Asked Questions</h3>
+      <p><strong>Q:</strong> How do I join a betting group?<br><strong>A:</strong> Simply click the "Join Now" button next to your desired group.</p>
+      <p><strong>Q:</strong> Are these groups free to join?<br><strong>A:</strong> Yes, all listed groups are free unless specified otherwise.</p>
+    </div>
+  </section>
+
+  <footer style="text-align:center; padding:20px; background:#0077cc; color:#fff;">
+    © 2025 BetLinkHub. All rights reserved.
+  </footer>
+
+  <script>
+    function toggleDarkMode(){
+      document.body.classList.toggle('dark-mode');
+    }
+    function toggleGroups(){
+      const hiddenGroups = document.querySelectorAll('.group-card.hidden');
+      const toggleBtn = document.querySelector('.view-toggle');
+      hiddenGroups.forEach(g => g.classList.toggle('hidden'));
+      toggleBtn.textContent = toggleBtn.textContent === 'View All' ? 'Show Less' : 'View All';
+    }
+  </script>
 </body>
 </html>
