--- a/index.html
+++ b/index.html
@@ -1,204 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Join trusted and verified betting WhatsApp groups for Cricket, Football, Casino, Teen Patti, Poker & Fantasy League. Daily tips, predictions & strategies to maximize your earnings safely.">
-  <meta name="keywords" content="betting group links, cricket betting tips, football betting, casino tips, teen patti strategies, poker group, fantasy league tips, whatsapp group links">
-  <meta name="robots" content="index, follow">
-  <title>BetLinkHub - Trusted Betting WhatsApp Groups</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f9f9f9;
-      color: #222;
-      transition: background 0.3s, color 0.3s;
-    }
-    .dark-mode {
-      background: #1a1a1a;
-      color: #f1f1f1;
-    }
-    header {
-      text-align: center;
-      padding: 20px;
-      background: #0077cc;
-      color: #fff;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
-    .toggle-btn {
-      margin-top: 10px;
-      padding: 8px 16px;
-      background: #fff;
-      color: #0077cc;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    section {
-      max-width: 1100px;
-      margin: auto;
-      padding: 20px;
-    }
-    .groups {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-    }
-    .group-card {
-      background: #fff;
-      padding: 16px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-    .dark-mode .group-card {
-      background: #2b2b2b;
-    }
-    .group-card:hover {
-      transform: translateY(-3px);
-    }
-    .group-card img {
-      width: 40px;
-      height: 40px;
-      vertical-align: middle;
-      margin-right: 8px;
-    }
-    .group-card h4 {
-      margin: 0;
-      font-size: 18px;
-      display: flex;
-      align-items: center;
-    }
-    .group-card p {
-      margin: 10px 0;
-      font-size: 14px;
-    }
-    .btn-primary {
-      display: inline-block;
-      padding: 8px 14px;
-      background: #0077cc;
-      color: #fff;
-      border-radius: 5px;
-      text-decoration: none;
-    }
-    .dark-mode .btn-primary {
-      background: #3399ff;
-    }
-    .view-toggle {
-      display: block;
-      text-align: center;
-      margin-top: 20px;
-      font-weight: bold;
-      cursor: pointer;
-      color: #0077cc;
-    }
-    .faq {
-      margin-top: 40px;
-    }
-    .faq h3 {
-      margin-bottom: 10px;
-    }
-    .faq p {
-      margin-bottom: 20px;
-      font-size: 14px;
-    }
-  </style>
-  <!-- FAQ Schema for SEO -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JokerLudo - Best Ludo WhatsApp Group Links | Earn Money Playing Ludo</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Join India's most trusted and high-paying Ludo earning WhatsApp groups. Daily matches, instant withdrawals, and secure gameplay. JokerLudo is your #1 Ludo King group link hub." />
+  <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
+  <meta name="author" content="JokerLudo Group" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
+  
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google-site-verification-code-here" />
+
+  <!-- Google Analytics (G-EZF7SRX6EJ) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-EZF7SRX6EJ');
+  </script>
+
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="JokerLudo - Trusted Ludo WhatsApp Groups" />
+  <meta property="og:description" content="Join free & verified Ludo WhatsApp groups. Daily matches, secure payments & 24/7 support. Play Ludo and win cash daily with JokerLudo!" />
+  <meta property="og:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+  <meta property="og:url" content="https://ludogrouplink.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="JokerLudo - Earn Real Money in Ludo" />
+  <meta name="twitter:description" content="Join JokerLudo's WhatsApp groups to earn money by playing Ludo daily. Safe, fast, and trusted." />
+  <meta name="twitter:image" content="https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" />
+
+  <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "FAQPage",
-    "mainEntity": [{
-      "@type": "Question",
-      "name": "What is BetLinkHub?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "BetLinkHub is a platform that provides trusted and verified WhatsApp group links for Cricket, Football, Casino, Teen Patti, Poker, and Fantasy League betting."
-      }
-    },{
-      "@type": "Question",
-      "name": "Are the betting groups safe to join?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, all listed groups are verified and regularly monitored to ensure safe and trustworthy betting tips."
-      }
-    }]
+    "@type": "Organization",
+    "name": "JokerLudo Group",
+    "url": "https://ludogrouplink.com",
+    "logo": "https://ludogrouplink.com/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg",
+    "sameAs": [
+      "https://www.facebook.com/JokerLudo",
+      "https://www.instagram.com/JokerLudo"
+    ]
   }
   </script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f4f5ff;
+      color: #333;
+    }
+    .navbar {
+      background: #2d2e52;
+      padding: 20px;
+      text-align: center;
+    }
+    .logo-img {
+      width: 100px;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+    .navbar h1 {
+      color: #fff;
+      font-size: 24px;
+      margin-top: 5px;
+    }
+    .nav-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 10px;
+    }
+    .nav-links a {
+      color: #fff;
+      text-decoration: none;
+      padding: 8px 14px;
+      border-radius: 6px;
+      transition: 0.3s;
+    }
+    .nav-links a:hover {
+      background: #ffde59;
+      color: #000;
+    }
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background: linear-gradient(to right, #ffe57f, #ffc107);
+    }
+    .hero h1 {
+      font-size: 32px;
+      margin-bottom: 15px;
+    }
+    .hero p {
+      font-size: 18px;
+      margin-bottom: 25px;
+      max-width: 700px;
+      margin: 0 auto 25px auto;
+      line-height: 1.5;
+    }
+    .join-btn {
+      background: #2d2e52;
+      color: #fff;
+      padding: 12px 25px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s;
+      display: inline-block;
+    }
+    .join-btn:hover {
+      background: #1a1a3a;
+      transform: scale(1.05);
+    }
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 40px 20px;
+    }
+    .card, .group-card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      width: 280px;
+      text-align: center;
+    }
+    footer {
+      background: #2d2e52;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    .footer-links {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 10px;
+    }
+    .footer-links a {
+      color: #fff;
+      text-decoration: none;
+    }
+    .footer-links a:hover {
+      color: #ffde59;
+    }
+    .seo-text {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 0 20px;
+      color: #555;
+      font-size: 16px;
+      line-height: 1.6;
+      text-align: center;
+    }
+    @media(max-width: 768px) {
+      .features { flex-direction: column; }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>BetLinkHub</h1>
-    <button class="toggle-btn" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-  </header>
-
-  <section>
-    <h2 style="text-align:center;">Join Trusted Betting Groups</h2>
-    <p style="text-align:center; max-width:800px; margin:auto;">
-      Discover the most trusted and verified betting WhatsApp groups for <strong>Cricket, Football, Casino, Teen Patti, Poker,</strong> and <strong>Fantasy League</strong>. 
-      Get daily expert tips, predictions, and strategies to increase your winnings safely.
-    </p>
-
-    <div class="groups" id="group-list">
-      <div class="group-card">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/861/861512.png"> [254 Members] Cricket Betting Group</h4>
-        <p>Verified cricket betting tips and match predictions for safe and profitable betting.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/271/271228.png"> [189 Members] Football Betting Group</h4>
-        <p>Daily football match insights, odds analysis, and safe betting tips from experts.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/861/861464.png"> [312 Members] Casino Betting Group</h4>
-        <p>Learn safe casino strategies, game analysis, and winning tricks from professionals.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card hidden">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/616/616489.png"> [276 Members] Teen Patti Pro Group</h4>
-        <p>Exclusive Teen Patti strategies, high-stakes tips, and pro tricks to win big.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card hidden">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/616/616408.png"> [198 Members] Poker Mastermind</h4>
-        <p>Learn winning poker strategies, bluffing techniques, and cash game secrets.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
-      <div class="group-card hidden">
-        <h4><img src="https://cdn-icons-png.flaticon.com/512/5969/5969012.png"> [223 Members] Fantasy League Experts</h4>
-        <p>Get expert picks, tips, and team strategies for fantasy sports leagues.</p>
-        <a href="https://wa.me/919670814522" target="_blank" class="btn-primary">Join Now</a>
-      </div>
+  <nav class="navbar">
+    <img src="WhatsApp Image 2025-07-27 at 10.45.50.jpeg" alt="JokerLudo Logo" class="logo-img">
+    <h1>JokerLudo</h1>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join Group</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
     </div>
+  </nav>
 
-    <span class="view-toggle" onclick="toggleGroups()">View All</span>
+  <section class="hero">
+    <h1>Join Trusted Ludo WhatsApp Groups!</h1>
+    <p>Make your luck with JokerLudo – India’s trusted Ludo earning platform with free and verified WhatsApp groups, Ludo King tournaments, and instant payouts.</p>
+    <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
+    <br><br>
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
+  </section>
 
-    <div class="faq">
-      <h3>Frequently Asked Questions</h3>
-      <p><strong>Q:</strong> How do I join a betting group?<br><strong>A:</strong> Simply click the "Join Now" button next to your desired group.</p>
-      <p><strong>Q:</strong> Are these groups free to join?<br><strong>A:</strong> Yes, all listed groups are free unless specified otherwise.</p>
+  <section class="features">
+    <div style="flex: 1; min-width: 300px;">
+      <video width="100%" controls muted poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
+        <source src="WhatsApp Video 2025-07-27 at 10.45.49.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+    <div style="flex: 1; min-width: 300px; padding: 20px;">
+      <h2>🎯 JokerLudo Group Benefits</h2>
+      <ul style="line-height: 1.8; font-size: 16px;">
+        <li>✅ 100% Trusted Admin</li>
+        <li>✅ ₹50 Minimum Withdrawal</li>
+        <li>✅ Fast Payout Support</li>
+        <li>✅ Secure Ludo Matches</li>
+        <li>✅ No Cheating Policy</li>
+        <li>✅ WhatsApp Support: <strong>9670814522</strong></li>
+        <li>⚡ 24/7 Service: Immediate response and daily matches</li>
+        <li>🎯 Trusted Groups: Verified Ludo King and FastWin communities</li>
+        <li>🏆 Earn Real Cash: Participate & withdraw instantly</li>
+      </ul>
+      <br>
+      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     </div>
   </section>
 
-  <footer style="text-align:center; padding:20px; background:#0077cc; color:#fff;">
-    © 2025 BetLinkHub. All rights reserved.
-  </footer>
+  <section class="seo-text">
+    <p>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</p>
+  </section>
+
+  <section class="features">
+    <div class="card">
+      <h3>✅ 24x7 Support</h3>
+      <p>Always online to help with fast responses.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Instant Withdrawals</h3>
+      <p>Quick payout every time you win.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Trusted Platform</h3>
+      <p>Official Deposit No: <strong>9670814522</strong></p>
+    </div>
+  </section>
+
+  <!-- ASCII Animation Section -->
+  <section class="ascii-animation" style="margin-top: 50px;">
+    <h2 style="text-align:center; margin-bottom: 20px;">💻 Terminal Style ASCII Animation</h2>
+    <div style="background: black; color: #00ff00; font-family: monospace; padding: 20px; border-radius: 10px; max-width: 800px; margin: auto;">
+      <pre id="ascii-animation">Loading animation...</pre>
+    </div>
+  </section>
 
   <script>
-    function toggleDarkMode(){
-      document.body.classList.toggle('dark-mode');
+    const totalFrames = 5;
+    const framePaths = Array.from({ length: totalFrames }, (_, i) => `frames/frame${i + 1}.txt`);
+    const frameDelay = 200;
+    const animationElement = document.getElementById("ascii-animation");
+    let frames = [];
+    let currentFrame = 0;
+
+    async function loadFrames() {
+      for (const path of framePaths) {
+        try {
+          const response = await fetch(path);
+          const text = await response.text();
+          frames.push(text);
+        } catch (err) {
+          frames.push("Error loading frame.");
+        }
+      }
+      startAnimation();
     }
-    function toggleGroups(){
-      const hiddenGroups = document.querySelectorAll('.group-card.hidden');
-      const toggleBtn = document.querySelector('.view-toggle');
-      hiddenGroups.forEach(g => g.classList.toggle('hidden'));
-      toggleBtn.textContent = toggleBtn.textContent === 'View All' ? 'Show Less' : 'View All';
+
+    function startAnimation() {
+      setInterval(() => {
+        animationElement.textContent = frames[currentFrame];
+        currentFrame = (currentFrame + 1) % frames.length;
+      }, frameDelay);
     }
+
+    loadFrames();
   </script>
+
+  <footer>
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+    </div>
+    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
